[package]
name = "rust-redis"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
bytes = "1.11.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
rehash = []

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
